# FrictionQPotSpringBlock

./: .ci_environment_docs.yaml  .gitignore  .pre-commit-config.yaml  CMakeLists.txt  Chunked_8hpp.html  Chunked_8hpp_source.html  FrictionQPotSpringBlockConfig.cmake  Line1d_8h.html  Line1d_8h.js  Line1d_8h_source.html  Line1d_8hpp_source.html  Line2d_8h.html  Line2d_8h.js  Line2d_8h_source.html  Particles_8h.html  Particles_8h.js  Particles_8h_source.html  README.md  Redraw_8hpp.html  Redraw_8hpp_source.html  Static_8hpp.html  Static_8hpp_source.html  annotated.html  annotated_dup.js  classFrictionQPotSpringBlock_1_1Line1d_1_1System-members.html  classFrictionQPotSpringBlock_1_1Line1d_1_1System.html  classFrictionQPotSpringBlock_1_1Line1d_1_1System.js  classFrictionQPotSpringBlock_1_1Line1d_1_1System__Cuspy__Laplace-members.html  classFrictionQPotSpringBlock_1_1Line1d_1_1System__Cuspy__Laplace.html  classFrictionQPotSpringBlock_1_1Line1d_1_1System__Cuspy__Laplace.js  classFrictionQPotSpringBlock_1_1Line1d_1_1System__Cuspy__Laplace__Nopassing-members.html  classFrictionQPotSpringBlock_1_1Line1d_1_1System__Cuspy__Laplace__Nopassing.html  classFrictionQPotSpringBlock_1_1Line1d_1_1System__Cuspy__Laplace__Nopassing.js  classFrictionQPotSpringBlock_1_1Line1d_1_1System__Cuspy__Laplace__RandomForcing-members.html  classFrictionQPotSpringBlock_1_1Line1d_1_1System__Cuspy__Laplace__RandomForcing.html  classFrictionQPotSpringBlock_1_1Line1d_1_1System__Cuspy__Laplace__RandomForcing.js  classFrictionQPotSpringBlock_1_1Line1d_1_1System__Cuspy__LongRange-members.html  classFrictionQPotSpringBlock_1_1Line1d_1_1System__Cuspy__LongRange.html  classFrictionQPotSpringBlock_1_1Line1d_1_1System__Cuspy__LongRange.js  classFrictionQPotSpringBlock_1_1Line1d_1_1System__Cuspy__Quartic-members.html  (+162 more)
.github/workflows/: ci-cpp.yml  ci-python.yml  ci.yml  gh-pages.yml  historic.yml
examples/: CMakeLists.txt  Flow.py  Line1d_Cuspy_Laplace.h5  Line1d_Cuspy_Laplace.py  Line1d_Cuspy_Laplace_LongRange.py  Line1d_Cuspy_Laplace_Nopassing.py  Line1d_Cuspy_Quartic.h5  Line1d_Cuspy_Quartic.py  Line1d_SemiSmooth_Laplace.h5  Line1d_SemiSmooth_Laplace.py  Line1d_System_Cuspy_Laplace_RandomForcing.h5  Line1d_System_Cuspy_Laplace_RandomForcing.py  Line2d_Cuspy_Laplace.h5  Line2d_Cuspy_Laplace.py  Load.cpp  Load.py  Load.txt  Load_chunked.cpp  Load_chunked_recover.cpp  Load_chunked_recover.py  Load_recover.cpp  Load_recover.py  OverdampedQuasiStatic.h5  OverdampedQuasiStatic.py  OverdampedQuasiStatic_chucked.py  Particles_Cuspy.h5  Particles_Cuspy.py  QuasiStatic.py  QuasiStaticLongRange.h5  QuasiStaticLongRange.py  QuasiStatic_chucked.py  QuasiStatic_simple.cpp  QuasiStatic_simple.py  SimpleQuasiStatic.cpp  SimpleQuasiStatic.py  SimpleQuasiStatic_historic.txt  SimpleQuasiStatic_plot.py  SystemThermalRandomForceNormal.h5  SystemThermalRandomForceNormal.py  ThermalRandomForcing.h5  (+5 more)
include/FrictionQPotSpringBlock/: Line1d.h  Line1d.hpp  Line2d.h  Particle.h  Particles.h  config.h  detail.h  version.h  version.hpp
python/: main.cpp
python/FrictionQPotSpringBlock/: Line1d.py  Particle.py  __init__.py
search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  classes_6.js  defines_0.js  defines_1.js  files_0.js  files_1.js  files_2.js  files_3.js  files_4.js  functions_0.js  functions_1.js  functions_10.js  functions_11.js  functions_12.js  functions_2.js  functions_3.js  (+20 more)
test/: CMakeLists.txt  Line1d.cpp  Line1d.py
tests/: CMakeLists.txt  Line1d.cpp  Line1d.py  test_Line1d.py  test_Line2d.py  test_Particles.py
